@@ -4,6 +4,7 @@
     o getGLPGShapePalettePatientProfile
     o getPageVar: fix for plot with multiple lines
     o fix to remove warning: 'Coordinate system already present.'
+    o subjectProfileLinePlot: fix to remove warning: 'geom_path: Each group consists of only one observation'
     o additional messages for verbose
 0.1.0
     o example datasets moved to the glpgUtilityFct package
